--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>Automated Skin Disease Diagnosis System</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body class="min-h-screen flex flex-col">
+  <app-root class="flex-1 flex flex-col items-center justify-center"></app-root>
 </body>
 </html>
